--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 							<p>
 							<h5>Major Courses:</h5>Principles and Methods of Remote Sensing Analysis, Progress In
 							Land Science and 3S Technology, Frontier of Agricultural Resources and Environmental
-							Science, Advanced Plant Nutrition, Soil Physics, Etc.
+							Science, Advanced Plant Nutrition, Soil Physics, etc.
 							</p>
 							<p>
 							<h5>Research interests:</h5>Spatial Interpolation Prediction of Meteorological Elements
@@ -330,7 +330,7 @@
 							<p>
 							<h5>Major Courses:</h5>GIS Principle, Remote Sensing Digital Image Processing, Virtual
 							Reality and GIS New Media, Modern Cartography, GIS Technology, Numerical Calculation,
-							Modern Physical Geography, GIS Geoscience Analysis, Etc.
+							Modern Physical Geography, GIS Geoscience Analysis, etc.
 
 							</p>
 							<p>
@@ -360,7 +360,7 @@
 							Principle and Method, Object-Oriented Programming, Remote Sensing Digital Image
 							Processing, Geographic Information System, Remote Sensing Image Analysis and
 							Application, Resource and Environmental Information System, Digital Photogrammetry, Web
-							GIS, Spatial Analysis and Model, Etc.
+							GIS, Spatial Analysis and Model, etc.
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -432,12 +432,10 @@
 			<ul class="disc publication_list">
 				<li>Yang, L., Luo, P.,
 					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
-					Atkinson, P.M. and Meng, L., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104068"
-						target="_blank" style="color:lightseagreen;">A spatio-temporal unmixing with heterogeneity model
-						for
-						the
-						identification of remotely sensed MODIS aerosols: Exemplified by the case of
-						Africa</a>.
+					Atkinson, P.M. and Meng, L., 2024.
+					<a href="https://doi.org/10.1016/j.jag.2024.104068" target="_blank" style="color:lightseagreen;">
+						A spatio-temporal unmixing with heterogeneity model for the identification of remotely sensed
+						MODIS aerosols: Exemplified by the case of Africa</a>.
 					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104068.
 				</li>
 				<li>Zhang, X., Song, Y., Dewan, A., Guo, Z., Cao, X., Bie, Q., Xie, Y., Ma, X., <b>Ren, K.</b>, Zhang,
