--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
+	<link rel="stylesheet" href="css/mycustom.css">
 
 	<!-- script
    ================================================== -->
@@ -418,18 +419,17 @@
 			</div> -->
 			<h3>Author: </h3>
 			<ul class="disc publication_list">
-				<li><b>Ren, Kai</b> and Swapan, Mohammad and Liu, Hang and Li, Linchao and Mancini, Francesco and Xiao,
-					Zhuoyao and Zhang, Xueyuan and Qu, Rui and Yu, Qiang, <a
-						href="http://dx.doi.org/10.2139/ssrn.4886409" target="_blank"
-						style="color:lightseagreen;">Identifying Climate and Environmental
-						Determinants of Spatial Disparities in Wheat Production Using a Geospatial Machine Learning
-						Model</a>.
-					Available at SSRN: https://ssrn.com/abstract=4886409 or http://dx.doi.org/10.2139/ssrn.4886409
-					(preprint)</li>
+				<li><b>Ren, K</b> ., etc. Identifying Climate and Environmental
+					Determinants of Spatial Disparities in Wheat Production Using a Geospatial Machine Learning
+					Model.
+					<span class="underview">(Under Review)</span>
+				</li>
 			</ul>
 
 			<h3>Co-author: </h3>
 			<ul class="disc publication_list">
+				<li>Yang, X., Song, Y., Yoo C., <b>Ren, K.</b>, Zhao, L., Wu, P., Irregular anisotropy in surface
+					urban heat island footprint. <span class="underview">(Under Review)</span></li>
 				<li>Yang, L., Luo, P.,
 					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
 					Atkinson, P.M. and Meng, L., 2024.
