--- a/cn/index.html
+++ b/cn/index.html
@@ -394,8 +394,12 @@
 			<ul class="disc publication_list">
 				<li><b>Ren, K</b> ., etc. Identifying Climate and Environmental
 					Determinants of Spatial Disparities in Wheat Production Using a Geospatial Machine Learning
-					Model.
-					<span class="underview">(Under review)</span>
+					Model. <i>GIScience & Remote Sensing (CAS Top Journal in Zone 1)</i>
+					<span class="underview">(Under Review)</span>
+				</li>
+				<li><b>Ren, K</b> ., etc. Second-dimension outliers for spatial prediction. <i>International Journal of
+						Geographical Information Science (CAS Top Journal in Zone 1)</i>
+					<span class="underview">(Under Review)</span>
 				</li>
 			</ul>
 
