--- a/index.html
+++ b/index.html
@@ -1316,10 +1316,10 @@
 				</div>
 				<h5>Where to find me</h5>
 				<p>
-					<a href="https://curtin.edu.au" style="color:#888888" target="_blank">Curtin University</a><br>
-					<a href="https://www.curtin.edu.au/about/learning-teaching/humanities/design-built-environment/"
-						style="color:#888888" target="_blank">School of Design and the Built
-						Environment</a>
+					<a href="https://www.nwafu.edu.cn/" style="color:#888888" target="_blank">Northwest A&F
+						University</a><br>
+					<a href="https://zhxy.nwafu.edu.cn/" style="color:#888888" target="_blank">College of Natural
+						Resources and Environment</a>
 				</p>
 				<!-- <p style="color: #888888">
 					Northwest A&F University<br>
@@ -1334,7 +1334,7 @@
 				<h5>Email Me At</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a><br>
+				<p><a href="mailto:renkaigis@nwafu.edu.cn" style="color:#888888">renkaigis@nwafu.edu.cn</a><br>
 					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 			</div>
@@ -1345,7 +1345,7 @@
 				</div>
 				<h5>Call Me At</h5>
 				<!-- <p style="color: #888888"> &plus;86 18851138358<br></p> -->
-				<p style="color: #888888"> &plus;61 04 6869 8085<br>&plus;86 188 5113 8358 </p>
+				<p style="color: #888888"> &plus;86 190 9848 5060<br>&plus;86 188 5113 8358 </p>
 			</div>
 
 		</div> <!-- /contact-info -->
