--- a/cn/index.html
+++ b/cn/index.html
@@ -1138,9 +1138,8 @@
 				</div>
 				<h5>地 址</h5>
 				<p>
-					<a href="https://curtin.edu.au" style="color:#888888" target="_blank">澳大利亚科廷大学</a><br>
-					<a href="https://www.curtin.edu.au/about/learning-teaching/humanities/design-built-environment/"
-						style="color:#888888" target="_blank">设计与建筑环境学院</a>
+					<a href="https://www.nwafu.edu.cn/" style="color:#888888" target="_blank">西北农林科技大学</a><br>
+					<a href="https://zhxy.nwafu.edu.cn/" style="color:#888888" target="_blank">资源环境学院</a>
 				</p>
 			</div>
 
@@ -1151,7 +1150,7 @@
 				<h5>邮 件</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="mailto:kai.ren@curtin.edu.au" style="color:#888888">kai.ren@curtin.edu.au</a><br>
+				<p><a href="mailto:renkaigis@nwafu.edu.cn" style="color:#888888">renkaigis@nwafu.edu.cn</a><br>
 					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 			</div>
@@ -1162,7 +1161,7 @@
 				</div>
 				<h5>电 话</h5>
 				<!-- <p style="color: #888888"> &plus;86 18851138358<br> </p> -->
-				<p style="color: #888888"> &plus;61 04 6869 8085<br>&plus;86 188 5113 8358 </p>
+				<p style="color: #888888"> &plus;86 190 9848 5060<br>&plus;86 188 5113 8358 </p>
 			</div>
 		</div> <!-- /contact-info -->
 	</section> <!-- /contact -->
