--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 						Intelligence for Cities</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_Provincial_Bronze_Award.jpg"
 						target="_blank"><span class="highlight_word">Won the Bronze Award (Provincial Level)</span> in
-						the 11<sup>st</sup> "Challenger
+						the 11<sup>th</sup> "Challenger
 						Cup" Shaanxi
 						University Student Entrepreneurship Plan Competition</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_School_Silver_Award.jpg"
