--- a/cn/index.html
+++ b/cn/index.html
@@ -668,8 +668,12 @@
 				<h2>成果奖项（Achievements &amp; Awards）</h2>
 			</div> -->
 
-			<h3>学习活动：</h3>
+			<h3>学术活动：</h3>
 			<ul class="disc">
+				<li><a href="https://ipcannual.com/" target="_blank"><span class="highlight_word">参加国际学术会议
+							IPC2025 并做报告，题为 “A Novel Geospatial Machine Learning Approach for Uncovering Wheat
+							Production Disparities: Evidence from Australia”（2025）</a>
+				</li>
 				<li><a href="https://ipcannual.com/" target="_blank"><span
 							class="highlight_word">组织国际学术会议，组委会成员</span>：第十一届创新生产与建造国际会议（IPC2025，2025 年 8 月 4-9
 						日，澳大利亚珀斯），全程参与会议的管理、组织和宣传工作（2025）</a>
