--- a/index.html
+++ b/index.html
@@ -754,6 +754,12 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
+				<li><b>2025</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ipcannual.com/" target="_blank"><span
+							class="highlight_word">Presented an Oral Report</span> titled
+						"A Novel Geospatial Machine Learning
+						Approach for Uncovering Wheat Production Disparities: Evidence from Australia" at the
+						International Conference IPC2025. (4-9 August 2025, Perth,
+						Australia). </a></li>
 				<li><b>2025</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ipcannual.com/" target="_blank">One of the <span
 							class="highlight_word">Organising Committees</span> of 11<sup>th</sup> International
 						Conference on Innovative Production and Construction (IPC2025, 4-9 August 2025, Perth,
