--- a/cn/index.html
+++ b/cn/index.html
@@ -426,6 +426,12 @@
 
 			<h3>国际会议: </h3>
 			<ul class="disc publication_list">
+				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2025). <a href="https://ipcannual.com/" target="_blank"
+						style="color:lightseagreen;">A Novel Geospatial Machine Learning Approach for Uncovering
+						Wheat Production Disparities: Evidence from Australia</a>. <i>The 11th International Conference
+						on Innovative
+						Production and Construction (IPC2025)</i>. Perth, Australia.
+				</li>
 				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2024). <a
 						href="https://agu.confex.com/agu/agu24/meetingapp.cgi/Paper/1760905" target="_blank"
 						style="color:lightseagreen;">Assessing the Impact of ENSO and Indian Ocean Dipole on Australian
