--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
 			<ul class="disc publication_list">
 				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2025). <a href="https://ipcannual.com/" target="_blank"
 						style="color:lightseagreen;">A Novel Geospatial Machine Learning Approach for Uncovering
-						Wheat Production Disparities: Evidence from Australia</a>. <i>The 11th International Conference
+						Wheat Production Disparities: Evidence from Australia</a>. <i>The 11<sup>th</sup> International
+						Conference
 						on Innovative
 						Production and Construction (IPC2025)</i>. Perth, Australia.
 				</li>
