--- a/cn/index.html
+++ b/cn/index.html
@@ -392,10 +392,12 @@
 
 			<h3>Author: </h3>
 			<ul class="disc publication_list">
-				<li><b>Ren, K</b> ., Song, Y., Yu, Q., etc., Identifying Climate and Environmental
-					Determinants of Spatial Disparities in Wheat Production Using a Geospatial Machine Learning
-					Model. <i> **** (CAS Top Journal in Zone 1)</i>
-					<span class="underview">(Under Review)</span>
+				<li><b>Ren, K.</b>, Song, Y.<sup>*</sup>, Li, L., Mancini, F., Xiao, Z., Zhang, X., Qu, R., Yu,
+					Q.<sup>*</sup>(2025). <a href="https://doi.org/10.1080/15481603.2025.2533487">Identifying
+						climate and environmental determinants of spatial disparities in wheat production using a
+						geospatial
+						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1).
+					<span class="accept">[中科院一区 Top，IF 6.9]</span>
 				</li>
 				<li><b>Ren, K</b> ., Song, Y., Yu, Q., Second-dimension outliers for spatial prediction.
 					<i> **** (CAS Top Journal in Zone 1)</i>
