--- a/cn/index.html
+++ b/cn/index.html
@@ -393,7 +393,8 @@
 			<h3>Author: </h3>
 			<ul class="disc publication_list">
 				<li><b>Ren, K.</b>, Song, Y.<sup>*</sup>, Li, L., Mancini, F., Xiao, Z., Zhang, X., Qu, R., Yu,
-					Q.<sup>*</sup>(2025). <a href="https://doi.org/10.1080/15481603.2025.2533487">Identifying
+					Q.<sup>*</sup>(2025). <a href="https://doi.org/10.1080/15481603.2025.2533487" target="_blank"
+						style="color:lightseagreen;">Identifying
 						climate and environmental determinants of spatial disparities in wheat production using a
 						geospatial
 						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1).
