--- a/index.html
+++ b/index.html
@@ -425,10 +425,11 @@
 						climate and environmental determinants of spatial disparities in wheat production using a
 						geospatial
 						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1).
-					<span class="accept">[Top Journal in Zone 1，IF 6.9]</span>
+					<span class="accept">[Top Journal in Zone 1, IF 6.9]</span>
 				</li>
-				<li><b>Ren, K</b> ., Song, Y., Yu, Q., Second-dimension outliers for spatial prediction.
-					<i> **** (CAS Top Journal in Zone 1)</i>
+				<li><b>Ren, K.</b>, Song, Y.<sup>*</sup>, Yu, Q.<sup>*</sup>, Second-dimension outliers for spatial
+					prediction.
+					<i> **** (Top Journal in Zone 1, IF 5.1)</i>
 					<span class="underview">(Under Review)</span>
 				</li>
 				<li><b>Ren, K</b> ., Song, Y., Yu, Q., patial outliers as a pattern measure for explaining
