--- a/cn/index.html
+++ b/cn/index.html
@@ -400,8 +400,9 @@
 						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1).
 					<span class="accept">[中科院一区 Top，IF 6.9]</span>
 				</li>
-				<li><b>Ren, K</b> ., Song, Y., Yu, Q., Second-dimension outliers for spatial prediction.
-					<i> **** (CAS Top Journal in Zone 1)</i>
+				<li><b>Ren, K</b> ., Song, Y.<sup>*</sup>, Yu, Q.<sup>*</sup>, Second-dimension outliers for spatial
+					prediction.
+					<i> **** [中科院一区 Top，IF 5.1]</i>
 					<span class="underview">(Under Review)</span>
 				</li>
 				<li><b>Ren, K</b> ., Song, Y., Yu, Q., patial outliers as a pattern measure for explaining
