--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 						style="color:lightseagreen;">Identifying
 						climate and environmental determinants of spatial disparities in wheat production using a
 						geospatial
-						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1).
+						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1): 2533487.
 					<span class="accept">[Top Journal in Zone 1, IF 6.9]</span>
 				</li>
 				<li><b>Ren, K.</b>, Song, Y.<sup>*</sup>, Yu, Q.<sup>*</sup>, Second-dimension outliers for spatial
