--- a/cn/index.html
+++ b/cn/index.html
@@ -405,7 +405,7 @@
 					<i> **** [中科院一区 Top，IF 5.1]</i>
 					<span class="underview">(Under Review)</span>
 				</li>
-				<li><b>Ren, K</b> ., Song, Y., Yu, Q., patial outliers as a pattern measure for explaining
+				<li><b>Ren, K</b> ., Song, Y., Yu, Q., Spatial outliers as a pattern measure for explaining
 					heterogeneity.
 					<span class="underview">(Under Review)</span>
 				</li>
