--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 					<i> **** (Top Journal in Zone 1, IF 5.1)</i>
 					<span class="underview">(Under Review)</span>
 				</li>
-				<li><b>Ren, K</b> ., Song, Y., Yu, Q., patial outliers as a pattern measure for explaining
+				<li><b>Ren, K</b> ., Song, Y., Yu, Q., Spatial outliers as a pattern measure for explaining
 					heterogeneity.
 					<span class="underview">(Under Review)</span>
 				</li>
