--- a/index.html
+++ b/index.html
@@ -1238,6 +1238,60 @@
 	<!-- /cta  -->
 
 
+	<!-- ====== Gallery Section ====== -->
+	<section id="gallery" class="grey-section">
+		<div class="row section-intro">
+			<div class="col-twelve">
+				<h1>Gallery</h1>
+				<h5>Selected Shots & Visuals</h5>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-twelve">
+				<div class="gallery-masonry">
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_001.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与李德仁院士（2024）</figcaption>
+					</figure>
+
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_002.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与龚健雅院士（2024）</figcaption>
+					</figure>
+
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_003.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与李德仁院士及夫人（2024）</figcaption>
+					</figure>
+
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_004.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与陈锐志院士（2024）</figcaption>
+					</figure>
+
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_005.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与李德仁院士，龚健雅院士，陈锐志院士（2024）</figcaption>
+					</figure>
+
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_006.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与各位院士/教授们的晚宴（2024）</figcaption>
+					</figure>
+
+					<figure class="gallery-card">
+						<img src="images/groupphoto/gp_007.jpg" alt="Caption 01" loading="lazy">
+						<figcaption>与宋泳泽教授（2025）</figcaption>
+					</figure>
+
+					<!-- 其余图片同上 -->
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- ====== /Gallery Section ====== -->
+
 	<!-- services Section
    ================================================== -->
 	<section id="services">
