--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 									class="fa-solid fa-award"></i>&nbsp;&nbsp;&nbsp;Awards</a></li>
 						<li><a class="smoothscroll" href="#portfolio" title=""><i
 									class="fa  fa-th-large"></i>&nbsp;&nbsp;&nbsp;Portfolio</a></li>
+						<li><a class="smoothscroll" href="#gallery" title=""><i
+									class="fa  fa-picture-o"></i>&nbsp;&nbsp;&nbsp;Gallery</a></li>
 						<li><a class="smoothscroll" href="#services" title=""><i
 									class="fa  fa-code"></i>&nbsp;&nbsp;Skills</a></li>
 						<li><a class="smoothscroll" href="#contact" title=""><i
