--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 			<ul class="disc publication_list">
 				<li><b>Ren, K.</b>, Song, Y.<sup>*</sup>, Li, L., Mancini, F., Xiao, Z., Zhang, X., Qu, R., Yu,
 					Q.<sup>*</sup>, 2025. <a href="https://doi.org/10.1080/15481603.2025.2533487" target="_blank"
-						style="color:lightseagreen;">Identifying
+						class="paper_title">Identifying
 						climate and environmental determinants of spatial disparities in wheat production using a
 						geospatial
 						machine learning model</a>. <i>GIScience & Remote Sensing</i>, 62(1): 2533487.
@@ -442,40 +442,41 @@
 
 			<h3>Co-author: </h3>
 			<ul class="disc publication_list">
-				<li>Yang, X., Song, Y., <b>Ren, K.</b>, Wu, P., Pesudo-spatial learning. <span class="underview">(Under
-						Review)</span></li>
-
-				<li> Xiao, Z., Song, Y., <b>Ren, K.</b>, Zheng, X., Zhang, Z., Wu, P., Evaluating urban greenspace
-					quality and
-					its impact on mortality risk: A longitudinal ecological study in Australia. <span
-						class="underview">(Under
-						Review)</span></li>
-				<li>Yang, X., Song, Y., Yoo C., <b>Ren, K.</b>, Wu, P., Irregular anisotropy in surface
-					urban heat island footprint. <span class="underview">(Under Review)</span></li>
-				<li>Li, L., He, Q., Shi, Y., Feng, P., Shi, L., <b>Ren, K.</b>, Yao, N., Liu, K., Harrison, M. T., Li,
-					Y., Liu,
-					D. L., Huete, A., Yu, Q., Yang, G., Robustness and uncertainty in drought trend projections across
-					dryland and non-dryland regions under greenhouse warming. <span class="underview">(Under
-						Review)</span></li>
+				<li>Yang, X., Song, Y., Yoo C., <b>Ren, K.</b>, Wu, P., 2025. <a
+						href="https://doi.org/10.1016/j.scs.2025.106779" target="_blank" class="paper_title">Irregular
+						anisotropy in surface urban
+						heat island footprint</a>. <i>Sustainable Cities and Society</i>, p.106779. </li>
 				<li>Yang, L., Luo, P.,
 					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
 					Atkinson, P.M. and Meng, L., 2024.
-					<a href="https://doi.org/10.1016/j.jag.2024.104068" target="_blank" style="color:lightseagreen;">
+					<a href="https://doi.org/10.1016/j.jag.2024.104068" target="_blank" class="paper_title">
 						A spatio-temporal unmixing with heterogeneity model for the identification of remotely sensed
 						MODIS aerosols: Exemplified by the case of Africa</a>.
 					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104068.
 				</li>
 				<li>Zhang, X., Song, Y., Dewan, A., Guo, Z., Cao, X., Bie, Q., Xie, Y., Ma, X., <b>Ren, K.</b>, Zhang,
 					H. and Xi, G., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104004" target="_blank"
-						style="color:lightseagreen;">Ecological influence of oasisation on peripheral regions</a>.
+						class="paper_title">Ecological influence of oasisation on peripheral regions</a>.
 					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104004.
 				</li>
+				<li>Yang, X., Song, Y., <b>Ren, K.</b>, Wu, P., Pesudo-spatial learning. <span class="underview">(Under
+						Review)</span></li>
+				<li> Xiao, Z., Song, Y., <b>Ren, K.</b>, Zheng, X., Zhang, Z., Wu, P., Evaluating urban greenspace
+					quality and
+					its impact on mortality risk: A longitudinal ecological study in Australia. <span
+						class="underview">(Under
+						Review)</span></li>
+				<li>Li, L., He, Q., Shi, Y., Feng, P., Shi, L., <b>Ren, K.</b>, Yao, N., Liu, K., Harrison, M. T., Li,
+					Y., Liu,
+					D. L., Huete, A., Yu, Q., Yang, G., Robustness and uncertainty in drought trend projections across
+					dryland and non-dryland regions under greenhouse warming. <span class="underview">(Under
+						Review)</span></li>
 			</ul>
 
 			<h3>International Conference: </h3>
 			<ul class="disc publication_list">
 				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2025). <a href="https://ipcannual.com/" target="_blank"
-						style="color:lightseagreen;">A Novel Geospatial Machine Learning Approach for Uncovering
+						class="paper_title">A Novel Geospatial Machine Learning Approach for Uncovering
 						Wheat Production Disparities: Evidence from Australia</a>. <i>The 11<sup>th</sup> International
 						Conference
 						on Innovative
@@ -483,12 +484,12 @@
 				</li>
 				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2024). <a
 						href="https://agu.confex.com/agu/agu24/meetingapp.cgi/Paper/1760905" target="_blank"
-						style="color:lightseagreen;">Assessing the Impact of ENSO and Indian Ocean Dipole on Australian
+						class="paper_title">Assessing the Impact of ENSO and Indian Ocean Dipole on Australian
 						Bushfires Using RandomForests</a>. <i>2024 American Geophysical Union (AGU24)</i>. Washington,
 					D.C., USA.
 				</li>
 				<li><b>Ren, K.</b> & Song, Y. (2023). <a href="https://yongzesong.com/cityplus-2023-proceedings/"
-						target="_blank" style="color:lightseagreen;">Local spatial heterogeneity of Wheat Yields in
+						target="_blank" class="paper_title">Local spatial heterogeneity of Wheat Yields in
 						Western Australia</a>.
 					In <i>Proceedings of City+2023@Perth International Conference on Geospatial Big Data and Artificial
 						Intelligence for Cities</i>. Perth, Curtin University, Australia.
