--- a/cn/index.html
+++ b/cn/index.html
@@ -179,7 +179,7 @@
 					</li>
 					<li>
 						<strong>Email:</strong>
-						<span><a href="mailto:kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
+						<span><a href="mailto:kai@njnu.edu.cn">kai@njnu.edu.cn</a></span>
 						<!-- <span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span> -->
 					</li>
 					<li>
@@ -1223,8 +1223,8 @@
 				</div>
 				<h5>地 址</h5>
 				<p>
-					<a href="https://www.nwafu.edu.cn/" style="color:#888888" target="_blank">西北农林科技大学</a><br>
-					<a href="https://zhxy.nwafu.edu.cn/" style="color:#888888" target="_blank">资源环境学院</a>
+					<a href="https://www.nwafu.edu.cn/" style="color:#888888" target="_blank">南京师范大学</a><br>
+					<a href="https://zhxy.nwafu.edu.cn/" style="color:#888888" target="_blank">气候系统预测与变化应对全国重点实验室</a>
 				</p>
 			</div>
 
@@ -1235,7 +1235,7 @@
 				<h5>邮 件</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="mailto:renkaigis@nwafu.edu.cn" style="color:#888888">renkaigis@nwafu.edu.cn</a><br>
+				<p><a href="mailto:kai@njnu.edu.cn" style="color:#888888">kai@njnu.edu.cn</a><br>
 					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 			</div>
