--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					</li>
 					<li>
 						<strong>Email:</strong>
-						<span><a href="mailto:kai.ren@curtin.edu.au">kai.ren@curtin.edu.au</a></span>
+						<span><a href="mailto:kai@njnu.edu.cn">kai@njnu.edu.cn</a></span>
 						<!-- <span><a href="mailto:renkaigis@gmail.com">renkaigis@gmail.com</a></span> -->
 					</li>
 					<li>
@@ -1405,10 +1405,10 @@
 				</div>
 				<h5>Where to find me</h5>
 				<p>
-					<a href="https://www.nwafu.edu.cn/" style="color:#888888" target="_blank">Northwest A&F
+					<a href="https://www.nwafu.edu.cn/" style="color:#888888" target="_blank">Nanjing Normal
 						University</a><br>
-					<a href="https://zhxy.nwafu.edu.cn/" style="color:#888888" target="_blank">College of Natural
-						Resources and Environment</a>
+					<a href="https://zhxy.nwafu.edu.cn/" style="color:#888888" target="_blank">State Key Laboratory of
+						Climate System Prediction and Risk Management</a>
 				</p>
 				<!-- <p style="color: #888888">
 					Northwest A&F University<br>
@@ -1423,7 +1423,7 @@
 				<h5>Email Me At</h5>
 				<!-- <p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p> -->
-				<p><a href="mailto:renkaigis@nwafu.edu.cn" style="color:#888888">renkaigis@nwafu.edu.cn</a><br>
+				<p><a href="mailto:kai@njnu.edu.cn" style="color:#888888">kai@njnu.edu.cn</a><br>
 					<a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 			</div>
